--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@badrap/result": "^0.2.8",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/cqrs": "^8.0.3",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
     "@types/lodash": "^4.14.182",
+    "async-mutex": "^0.3.2",
     "class-validator": "^0.13.2",
     "lodash": "^4.17.21",
+    "nanoid": "^3.3.3",
     "nestjs-console": "^7.0.1",
+    "queue-fifo": "^0.2.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
