--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "postversion": "git push && git push --tags"
   },
   "dependencies": {
     "@badrap/result": "^0.2.8",
