--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-validator": "^0.13.2",
     "lodash": "^4.17.21",
     "nanoid": "^3.3.3",
+    "nestjs-config": "^1.4.10",
     "nestjs-console": "^7.0.1",
     "queue-fifo": "^0.2.6",
     "reflect-metadata": "^0.1.13",
